--- a/public/global.css
+++ b/public/global.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-Bold.woff') format('woff');
+  src: url('fonts/Mohave-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-BoldItalic.woff') format('woff');
+  src: url('fonts/Mohave-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-Italic.woff') format('woff');
+  src: url('fonts/Mohave-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -28,7 +28,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-LightItalic.woff') format('woff');
+  src: url('fonts/Mohave-LightItalic.woff') format('woff');
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -36,7 +36,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-Light.woff') format('woff');
+  src: url('fonts/Mohave-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -44,7 +44,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-MediumItalic.woff') format('woff');
+  src: url('fonts/Mohave-MediumItalic.woff') format('woff');
   font-weight: 500;
   font-style: italic;
   font-display: swap;
@@ -52,7 +52,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-Medium.woff') format('woff');
+  src: url('fonts/Mohave-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -60,7 +60,7 @@
 
 @font-face {
   font-family: 'Mohave';
-  src: url('/fonts/Mohave-Regular.woff') format('woff');
+  src: url('fonts/Mohave-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
